crates/printer/src/schema_type_printer/tests/snapshots/nitrogql_printer__schema_type_printer__tests__enum_runtime.snap
---
source: crates/printer/src/schema_type_printer/tests/mod.rs
expression: printed
---
export type __nitrogql_schema = {};

type __Beautify<Obj> = { [K in keyof Obj]: Obj[K] } & {};
export type __SelectionSet<Orig, Obj, Others> =
  __Beautify<Pick<{
    [K in keyof Orig]: Obj extends Record<K, infer V> ? V : unknown
  }, Extract<keyof Orig, keyof Obj>> & Others>;
export type UserType = "NormalUser" | "PremiumUser" | "AdminUser";
export const UserType = {
NormalUser: "NormalUser",
PremiumUser: "PremiumUser",
AdminUser: "AdminUser",
} as const;


