crates/printer/src/schema_type_printer/tests/snapshots/nitrogql_printer__schema_type_printer__tests__scalar_printing.snap
---
source: crates/printer/src/schema_type_printer/tests/mod.rs
expression: printed
---
export type __nitrogql_schema = {};

type __Beautify<Obj> = { [K in keyof Obj]: Obj[K] } & {};
export type __SelectionSet<Orig, Obj> =
  __Beautify<Pick<{
    [K in keyof Orig]: Obj extends Record<K, infer V> ? V : unknown
  }, Extract<keyof Orig, keyof Obj>>>;
export type BigInt = bigint;

export type { Date };


